# Monarch-of-Tone

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/rules/: architecture.md  build.md  circuit.md  dsp.md  ui.md
.github/workflows/: ci.yml  release.yml
analysis/: MID_EQ_AUDIT.md  VALIDATION_REPORT.md  analyze.py  gen_test_signal.py  internal_checks.py  mid_eq_audit.py  null_test.py  run_validation.py
installer/linux/: build_deb.sh  control
installer/macos/: Distribution.xml  build_installer.sh
installer/windows/: Monarch.nsi
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: DiodeClipper.h  MonarchChannel.h  SW1SoftClip.h  SW2HardClip.h  Stage1.h  ToneStage.h  VolumePot.h
src/ui/: ClipSwitch.h  LEDIndicator.h  MonarchLookAndFeel.cpp  MonarchLookAndFeel.h  PedalFace.cpp  PedalFace.h  VUMeter.h  VoltageSelector.h
src/utils/: TaperUtils.h
tests/: FeatureProfile.cpp  FullChain_DualChannel.cpp  OSFidelity.cpp  PerfBenchmark.cpp  Stage1_HiGain.cpp  ToneStage_FreqResponse.cpp  TrimLock.cpp  VolumePot_Taper.cpp
tools/: ControlSweep.cpp  PedalRender.cpp  UISnapshot.cpp
ui/: ui-replacements.md
